--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   CONTAINER_IMAGE: guestbook:${{ github.sha }}
+  AWS_REGION: ap-northeast-1
 
 jobs:
   build-and-push:
@@ -33,10 +34,13 @@ jobs:
 
     # Add steps here like linting, testing, minification, etc.
       
-    - name: Setup ECR
-      run: |
+    #- name: Setup ECR
+    #  run: |
         # Login to AWS ECR
-        $( aws ecr get-login --no-include-email )
+    #    $( aws ecr get-login --no-include-email )
+    - name: Setup ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
     - name: Build and tag the image
       run: |
         # Build and tag the image
