--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,8 @@ jobs:
     - name: Setup ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+      run: |
+        # Login to AWS ECR
     - name: Build and tag the image
       run: |
         # Build and tag the image
